# simple-task-scheduler

./: .ocamlformat  dune-project  simple_task_scheduler.opam
lib/: dune  intf.ml  priority_queue.ml  priority_queue.mli  scheduler.ml  scheduler.mli  simple_task_scheduler.mli  task.ml  task.mli
lib/math_ops/: dune  math_ops.ml
test/: dune  test_priority_queue.ml  test_scheduler.ml  test_simple_task_scheduler.ml
